OpenHealth/force-app/main/default/force-app/main/default/objects/Specialization__c/Specialization__c.object-meta.xml
<CustomObject>
    <label>Specialization</label>
    <pluralLabel>Specializations</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>