OpenHealth/force-app/main/default/force-app/main/default/objects/Specialization__c/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Text</type>
    <length>255</length>
</CustomField>