OpenHealth/force-app/main/default/force-app/main/default/objects/Specialization__c/CertificationDate__c.field-meta.xml
<CustomField>
    <fullName>CertificationDate__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>