OpenHealth/force-app/main/default/force-app/main/default/objects/Specialization__c/SpecialtyName__c.field-meta.xml
<CustomField>
    <fullName>SpecialtyName__c</fullName>
    <label>SpecialtyName</label>
    <type>Text</type>
    <length>255</length>
</CustomField>